<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content"><EditText android:id="@+id/etContactName" android:hint="@string/hint_contact_name" android:background="@drawable/bg_input" android:layout_width="match_parent" android:layout_height="52dp"/><EditText android:id="@+id/etContactPhone" android:hint="@string/hint_contact_phone" android:inputType="phone" android:background="@drawable/bg_input" android:layout_marginTop="10dp" android:layout_width="match_parent" android:layout_height="52dp"/><EditText android:id="@+id/etRelationship" android:hint="@string/hint_relationship" android:background="@drawable/bg_input" android:layout_marginTop="10dp" android:layout_width="match_parent" android:layout_height="52dp"/></LinearLayout>
